--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,46 @@
   to {
     transform: rotate(360deg);
   }
+
+  
+}
+*/
+* {  
+  margin : 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero{
+  display: flex;
+  height: 100vh;
+  background-color: black;
+  background-image: url(./Images/sfondo.jpeg);
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, -0.4);
+}
+
+.content{
+  border: 1px red solid;
+  display: flex;
+  flex-direction: column;
+  /* max-width: 1200px; */
+  width: 100%;
+  margin: 0 0 0 0 auto;
+  /* justify-content: left;
+  align-items: left; */
+  color: rgb(220, 153, 28);
+
+}
+.header{
+  display: flex;
+  flex-direction: row;
+}
+
+.body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px red solid;
 }
