--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
 
+
+
 * {  
   margin : 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 
 .hero{
   display: flex;
   height: 100vh;
   background-color: black;
-  background-image: url(./Images/sfondo.jpeg);
+  background-image: url(./Images/images_chieri/DSC_2489.jpg);
   background-size: cover;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, -0.4);
 }
@@ -39,4 +43,42 @@
   align-items: center;
   border: 1px red solid;
 }
+
+/* Logo.css */
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.logo img {
+  width: 15vw; /* Usa viewport width per dimensioni relative */
+  max-width: 200px; /* Dimensione massima */
+  height: auto; /* Mantiene le proporzioni */
+}
+
+/* Ridimensiona il logo per schermi più piccoli */
+@media only screen and (max-width: 1200px) {
+  .logo img {
+    width: 20vw;
+    max-width: 150px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .logo img {
+    width: 25vw;
+    max-width: 100px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .logo img {
+    width: 30vw;
+    max-width: 80px;
+  }
+}
+
 
